objects/Page_Text__c.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <picklist>
            <picklistValues>
                <fullName>Part A - Overview</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Part B - The Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part C - The Organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Page Text</label>
    <nameField>
        <label>Page Text Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Text</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>